Added connection to firestore

--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,6 +1,6 @@
 {
   "name": "smartLockTest",
-  "app_id": "",
+  "app_id": "901718b3",
   "type": "ionic-angular",
   "integrations": {
     "cordova": {}
