--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "5.0.3",
     "@angular/platform-browser-dynamic": "5.0.3",
     "@ionic-native/android-fingerprint-auth": "^4.5.3",
+    "@ionic-native/bluetooth-serial": "^4.5.3",
     "@ionic-native/core": "4.4.0",
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/status-bar": "4.4.0",
@@ -29,6 +30,7 @@
     "angularfire": "^2.3.0",
     "angularfire2": "^5.0.0-rc.6",
     "cordova-plugin-android-fingerprint-auth": "^1.4.3",
+    "cordova-plugin-bluetooth-serial": "^0.4.7",
     "firebase": "^4.11.0",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
@@ -43,7 +45,8 @@
   "description": "An Ionic project",
   "cordova": {
     "plugins": {
-      "cordova-plugin-android-fingerprint-auth": {}
+      "cordova-plugin-android-fingerprint-auth": {},
+      "cordova-plugin-bluetooth-serial": {}
     }
   }
 }
