--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ionic-native/android-fingerprint-auth": "^4.5.3",
     "@ionic-native/bluetooth-serial": "^4.5.3",
     "@ionic-native/core": "4.4.0",
+    "@ionic-native/fcm": "^4.5.3",
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/status-bar": "4.4.0",
     "@ionic/pro": "1.0.20",
@@ -46,7 +47,8 @@
   "cordova": {
     "plugins": {
       "cordova-plugin-android-fingerprint-auth": {},
-      "cordova-plugin-bluetooth-serial": {}
+      "cordova-plugin-bluetooth-serial": {},
+      "cordova-plugin-fcm": {}
     }
   }
 }
