--- a/package.json
+++ b/package.json
@@ -30,8 +30,16 @@
     "@ionic/storage": "2.1.3",
     "angularfire": "^2.3.0",
     "angularfire2": "^5.0.0-rc.6",
+    "cordova-android": "7.0.0",
+    "cordova-browser": "5.0.3",
     "cordova-plugin-android-fingerprint-auth": "^1.4.3",
     "cordova-plugin-bluetooth-serial": "^0.4.7",
+    "cordova-plugin-device": "^2.0.1",
+    "cordova-plugin-fcm": "~2.1.2",
+    "cordova-plugin-ionic-keyboard": "^2.0.5",
+    "cordova-plugin-ionic-webview": "^1.1.16",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-whitelist": "^1.3.3",
     "firebase": "^4.11.0",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
@@ -40,6 +48,7 @@
     "zone.js": "0.8.18"
   },
   "devDependencies": {
+    "@angular/cli": "^1.7.3",
     "@ionic/app-scripts": "3.1.8",
     "typescript": "2.4.2"
   },
@@ -48,7 +57,12 @@
     "plugins": {
       "cordova-plugin-android-fingerprint-auth": {},
       "cordova-plugin-bluetooth-serial": {},
-      "cordova-plugin-fcm": {}
+      "cordova-plugin-fcm": {},
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-keyboard": {}
     }
   }
 }
